= Jsus Changelog
== Version 0.3.2
* Fixed minor problem with middleware when package name and source file tag
  are the same
* Settings are now shared between Jsus::Middleware and subclasses

== Version 0.3.1
* Added wildcard support for Jsus::Middleware

== Version 0.3.0
* Added Jsus::Middleware for rack middleware stuff. Yay!

== Version 0.2.7
* Brushed up CLI code
* Added --watch option for cli (using fssm gem and fs backend for your operating system)
* Added --compress option for cli (using yui-compressor gem)

== Version 0.2.6
* Moved support classes to Jsus::Util module namespace
* Now using autoload instead of require's for stuff

== Version 0.2.5
* Fixed Container#sort not dealing with wildcards, which made it slower but
  at least made it work
* Reduced a whole ton of Container creation calls wherever they didn't seem
  appropriate
* Container sorting routine is now lazily evaluated

All in all, this resulted in 70% speedups on complex cases.

== Version 0.2.4
* Replacements feature
* Postprocessing feature
See jsus-examples repo or features dir for more information.

== Version 0.2.3
* Minor CLI reworkings:
  * Deprecated -i and -o options (use plain arguments now)
  * Restored generate-includes customizable root option

== Version 0.2.2
* Fixed dupes in structure json files

== Version 0.2.1
* Started adding cucumber features for command-line utility. Look into /features
  directory for reference
* Removed choice gem from list of dependency. Using stdlib's optparse instead

== Version 0.2.0
* Support for mooforge validator (checks if every file has authors && license),
  more validators at request
* Errors on source files should now be easier to track down

== Version 0.1.21
* Support for wildcards in requires statements (beware, something could break)

== Version 0.1.20
* Better integration for murdoc (factored it into class Jsus::Documenter)
* Tree structure for future reuse

== Versions 0.1.11 to 0.1.19